--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,5 +2,11 @@
     display: flex;
     justify-content: space-between;
     max-width: 700px;
+    min-width: 400px;
+    height: 100px;
     align-items: center;
+    border-bottom: 2px solid #5e5c5c;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    padding: 0 10px ;
+    
 }
