--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -22,9 +22,10 @@ ul {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    margin: 0;
     align-items: center;
     width: 270px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contactInfo li p {
