--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,7 +1,8 @@
 .contactList {
     display: flex;
+    flex-direction: column;
     gap: 10px;
-    flex-wrap: wrap;
-    padding-left: 0;
     margin-top: 20px;
+    justify-content: center;
+    
 }
